Fixes for random flickering - adding translate3(0,0,0) throughout many elements

--- a/wp-content/themes/hmr-theme/assets/css/less/bootstrap/navs.less
+++ b/wp-content/themes/hmr-theme/assets/css/less/bootstrap/navs.less
@@ -173,6 +173,8 @@
   cursor:pointer;
   display:none;
   &.slideUp {
+  height:100%;
+  bottom:0;
   background:url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABEAAAAICAQAAAC1vdwiAAAAeUlEQVQYGXXBIQ6CABQA0J8MFgrJ2Y1Uzdo5ABdwnsA70TWrmWrUSqJoYHPsuemmY+h70WfmaBb/ydSoZfGbhcbFylVjHkNW7s4mEabObpbRJ9eqpPEiVWnl8aXwcJDEh8TJQxFvNjo74+gxttdZR4QtSqMYMFJi+wTtXVTgC4pZRwAAAABJRU5ErkJggg==) no-repeat center center;
     &:hover {
       background-color:@gray;
